openmp/offload/src/offload.h

/*
 *  The target architecture.
 */
typedef enum TARGET_TYPE {
    TARGET_NONE,    /* Undefine target */
    TARGET_HOST,    /* Host used as target */
    TARGET_MIC      /* MIC target */
} TARGET_TYPE;
/* nested lock API functions */

typedef struct {
    omp_nest_lock_t lock;
} omp_nest_lock_target_t;
extern int omp_test_nest_lock_target(
    TARGET_TYPE target_type,
    int target_number,
    omp_nest_lock_target_t *lock
);
/* kmp API functions */

extern void kmp_set_stacksize_target(
    TARGET_TYPE target_type,
    int target_number,
    int size
);
extern int kmp_get_stacksize_target(
    TARGET_TYPE target_type,
    int target_number
);
extern void kmp_set_stacksize_s_target(
    TARGET_TYPE target_type,
    int target_number,
    size_t size
);
extern size_t kmp_get_stacksize_s_target(
    TARGET_TYPE target_type,
    int target_number
);
extern void kmp_set_blocktime_target(
    TARGET_TYPE target_type,
    int target_number,
    int time
);
extern int kmp_get_blocktime_target(
    TARGET_TYPE target_type,
    int target_number
);
extern void kmp_set_library_serial_target(
    TARGET_TYPE target_type,
    int target_number
);
extern void kmp_set_library_turnaround_target(
    TARGET_TYPE target_type,
    int target_number
);
extern void kmp_set_library_throughput_target(
    TARGET_TYPE target_type,
    int target_number
);
extern void kmp_set_library_target(
    TARGET_TYPE target_type,
    int target_number,
    int mode
);
extern int kmp_get_library_target(
    TARGET_TYPE target_type,
    int target_number
);
extern void kmp_set_defaults_target(
    TARGET_TYPE target_type,
    int target_number,
    char const *defaults
);
/* affinity API functions */

typedef struct {
    kmp_affinity_mask_t mask;
} kmp_affinity_mask_target_t;
extern void kmp_create_affinity_mask_target(
    TARGET_TYPE target_type,
    int target_number,
    kmp_affinity_mask_target_t *mask
);
extern void kmp_destroy_affinity_mask_target(
    TARGET_TYPE target_type,
    int target_number,
    kmp_affinity_mask_target_t *mask
);
extern int kmp_set_affinity_target(
    TARGET_TYPE target_type,
    int target_number,
    kmp_affinity_mask_target_t *mask
);
extern int kmp_get_affinity_target(
    TARGET_TYPE target_type,
    int target_number,
    kmp_affinity_mask_target_t *mask
);
extern int kmp_get_affinity_max_proc_target(
    TARGET_TYPE target_type,
    int target_number
);
extern int kmp_set_affinity_mask_proc_target(
    TARGET_TYPE target_type,
    int target_number,
    int proc,
    kmp_affinity_mask_target_t *mask
);
extern int kmp_unset_affinity_mask_proc_target(
    TARGET_TYPE target_type,
    int target_number,
    int proc,
    kmp_affinity_mask_target_t *mask
);
extern int kmp_get_affinity_mask_proc_target(
    TARGET_TYPE target_type,
    int target_number,
    int proc,
    kmp_affinity_mask_target_t *mask
);