openmp/offload/src/mic_lib.f90


function omp_test_nest_lock_target (target_type,                       &
                                    target_number,                     &
                                    lock)                              &
           bind (C, name = "omp_test_nest_lock_target")
  import :: c_int, c_intptr_t
  integer (kind=c_int)        :: omp_test_nest_lock_target
  integer (kind=c_int), value :: target_type, target_number
  integer (kind=c_intptr_t), value :: lock
end function omp_test_nest_lock_target

! kmp API functions

subroutine kmp_set_stacksize_target (target_type,                      &
                                     target_number,                    &
                                     size)                             &
           bind (C, name = "kmp_set_stacksize_target")
  import :: c_int
  integer (kind=c_int), value :: target_type, target_number, size
end subroutine kmp_set_stacksize_target

function kmp_get_stacksize_target (target_type,                        &
                                   target_number)                      &
         bind (C, name = "kmp_get_stacksize_target")
  import :: c_int
  integer (kind=c_int)        :: kmp_get_stacksize_target
  integer (kind=c_int), value :: target_type, target_number
end function kmp_get_stacksize_target

subroutine kmp_set_stacksize_s_target (target_type,                    &
                                       target_number,                  &
                                       size)                           &
           bind (C, name = "kmp_set_stacksize_s_target")
  import :: c_int
  integer (kind=c_int), value :: target_type, target_number, size
end subroutine kmp_set_stacksize_s_target

function kmp_get_stacksize_s_target (target_type,                      &
                                     target_number)                    &
         bind (C, name = "kmp_get_stacksize_s_target")
  import :: c_int
  integer (kind=c_int)        :: kmp_get_stacksize_s_target
  integer (kind=c_int), value :: target_type, target_number
end function kmp_get_stacksize_s_target

subroutine kmp_set_blocktime_target (target_type,                      &
                                     target_number,                    &
                                     time)                             &
           bind (C, name = "kmp_set_blocktime_target")
  import :: c_int
  integer (kind=c_int), value :: target_type, target_number, time
end subroutine kmp_set_blocktime_target

function kmp_get_blocktime_target (target_type,                        &
                                   target_number)                      &
         bind (C, name = "kmp_get_blocktime_target")
  import :: c_int
  integer (kind=c_int)        :: kmp_get_blocktime_target
  integer (kind=c_int), value :: target_type, target_number
end function kmp_get_blocktime_target

subroutine kmp_set_library_serial_target (target_type,                 &
                                          target_number)               &
           bind (C, name = "kmp_set_library_serial_target")
  import :: c_int
  integer (kind=c_int), value :: target_type, target_number
end subroutine kmp_set_library_serial_target

subroutine kmp_set_library_turnaround_target (target_type,             &
                                              target_number)           &
           bind (C, name = "kmp_set_library_turnaround_target")
  import :: c_int
  integer (kind=c_int), value :: target_type, target_number
end subroutine kmp_set_library_turnaround_target

subroutine kmp_set_library_throughput_target (target_type,             &
                                              target_number)           &
           bind (C, name = "kmp_set_library_throughput_target")
  import :: c_int
  integer (kind=c_int), value :: target_type, target_number
end subroutine kmp_set_library_throughput_target

subroutine kmp_set_library_target (target_type,                        &
                                   target_number,                      &
                                   mode)                               &
           bind (C, name = "kmp_set_library_target")
  import :: c_int
  integer (kind=c_int), value :: target_type, target_number, mode
end subroutine kmp_set_library_target

function kmp_get_library_target (target_type,                          &
                                 target_number)                        &
         bind (C, name = "kmp_get_library_target")
  import :: c_int
  integer (kind=c_int)        :: kmp_get_library_target
  integer (kind=c_int), value :: target_type, target_number
end function kmp_get_library_target

subroutine kmp_set_defaults_target (target_type,                       &
                                    target_number,                     &
                                    defaults)                          &
           bind (C, name = "kmp_set_defaults_target")
  import :: c_int, c_char
 character (kind=c_char) :: defaults(*)
 integer (kind=c_int), value :: target_type, target_number
end subroutine kmp_set_defaults_target

! affinity API functions

subroutine kmp_create_affinity_mask_target (target_type,               &
                                            target_number,             &
                                            mask)                      &
           bind (C, name = "kmp_create_affinity_mask_target")
  import :: c_int, c_intptr_t
  integer (kind=c_int), value :: target_type, target_number
  integer (kind=c_intptr_t), value :: mask
end subroutine kmp_create_affinity_mask_target

subroutine kmp_destroy_affinity_mask_target (target_type,              &
                                             target_number,            &
                                             mask)                     &
           bind (C, name = "kmp_destroy_affinity_mask_target")
  import :: c_int, c_intptr_t
  integer (kind=c_int), value :: target_type, target_number
  integer (kind=c_intptr_t), value :: mask
end subroutine kmp_destroy_affinity_mask_target

function kmp_set_affinity_target (target_type,                         &
                                  target_number,                       &
                                  mask)                                &
           bind (C, name = "kmp_set_affinity_target")
  import :: c_int, c_intptr_t
  integer (kind=c_int)        :: kmp_set_affinity_target
  integer (kind=c_int), value :: target_type, target_number
  integer (kind=c_intptr_t), value :: mask
end function kmp_set_affinity_target

function kmp_get_affinity_target (target_type,                         &
                                  target_number,                       &
                                  mask)                                &
           bind (C, name = "kmp_get_affinity_target")
  import :: c_int, c_intptr_t
  integer (kind=c_int)        :: kmp_get_affinity_target
  integer (kind=c_int), value :: target_type, target_number
  integer (kind=c_intptr_t), value :: mask
end function kmp_get_affinity_target

function kmp_get_affinity_max_proc_target (target_type,                &
                                           target_number)              &
           bind (C, name = "kmp_get_affinity_max_proc_target")
  import :: c_int
  integer (kind=c_int)        :: kmp_get_affinity_max_proc_target
  integer (kind=c_int), value :: target_type, target_number
end function kmp_get_affinity_max_proc_target

function kmp_set_affinity_mask_proc_target (target_type,               &
                                            target_number,             &
                                            proc,                      &
                                            mask)                      &
           bind (C, name = "kmp_set_affinity_mask_proc_target")
  import :: c_int, c_intptr_t
  integer (kind=c_int)        :: kmp_set_affinity_mask_proc_target
  integer (kind=c_int), value :: target_type, target_number, proc
  integer (kind=c_intptr_t), value :: mask
end function kmp_set_affinity_mask_proc_target

function kmp_unset_affinity_mask_proc_target (target_type,             &
                                              target_number,           &
                                              proc,                    &
                                              mask)                    &
           bind (C, name = "kmp_unset_affinity_mask_proc_target")
  import :: c_int, c_intptr_t
  integer (kind=c_int)        :: kmp_unset_affinity_mask_proc_target
  integer (kind=c_int), value :: target_type, target_number, proc
  integer (kind=c_intptr_t), value :: mask
end function kmp_unset_affinity_mask_proc_target

function kmp_get_affinity_mask_proc_target (target_type,               &
                                            target_number,             &
                                            proc,                      &
                                            mask)                      &
           bind (C, name = "kmp_get_affinity_mask_proc_target")
  import :: c_int, c_intptr_t
  integer (kind=c_int)        :: kmp_get_affinity_mask_proc_target
  integer (kind=c_int), value :: target_type, target_number, proc
  integer (kind=c_intptr_t), value :: mask
end function kmp_get_affinity_mask_proc_target

end interface
end module mic_lib
